--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
+    <!-- Reference
+    https://github.com/jyotirmoy-paul/android-geofencing
+    -->
     <string name="app_name">Geofencing</string>
 </resources>
