Updated RadioButton style, Designed App logo and gave name to the app, Displaying app icon on home screen with app description, removed unused resources and files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <!-- Reference
     https://github.com/jyotirmoy-paul/android-geofencing
     -->
-    <string name="app_name">Geofencing</string>
+    <string name="app_name">Tradow</string>
 </resources>
